# netvr

./: .editorconfig  .envrc  .gitattributes  .gitignore  .prettierrc  README.md  cspell.json  devshell.toml  flake.nix  package.json
.github/workflows/: netvr-cpp-dll.yaml  netvr-cpp.yaml  netvr-server.yaml  netvr-unity.yaml  netvr.yaml  purge-artifacts.yaml  unity-activation-windows.yaml  unity-activation.yaml
isbl-thesis/: README.md  assets.js  package.json  tsconfig.json  vite.config.ts
isbl-thesis/thesis/: base.tsx  bibliography-schema.json  bibliography.tsx  colors.tsx  design.tsx  document.tsx  font.tsx  footnotes.tsx  react-markdown.tsx  references.tsx  rehype-ligatures.tsx  rehype-plugins.tsx  remark-plugins.tsx  thesis.tsx  title-page.tsx  use-pdf.tsx
netvr-cpp/: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  building.md
netvr-cpp/includes/: netvr.h
netvr-cpp/src/: calibration-eigen.cpp  calibration-eigen.h  calibration.cpp  main.cpp  netvr-internal.h
netvr-dashboard/: .eslintrc  README.md  index.html  package.json  vite.config.ts
netvr-dashboard/src/: augment.d.ts  calibration.tsx  dashboard.tsx  data.tsx  design.tsx  error-boundary.tsx  index.ts  index.tsx  json-view.tsx  listen-to-socket.tsx  location-map.tsx  log.tsx  menu.tsx  not-found.tsx  sync-devices.tsx  thesis.tsx  types.d.ts  use-listen-to-socket.tsx  use-theme.tsx  utils.ts
netvr-dashboard/src/components/: design.tsx  error-boundary.tsx  json-view.tsx  listen-to-socket.tsx  theme.tsx
netvr-dashboard/src/dashboard/: calibration-pane.tsx  client-pane.tsx  dashboard.tsx  fullscreen-button.tsx  logs-modal-dialog.tsx  merge-data.tsx  message-log.tsx  quick-actions-pane.tsx  trigger-calibration.tsx  use-sync-clients-by-headset.tsx
netvr-dashboard/src/other/: delay-viz.tsx  sample-viz.tsx  shared.tsx
netvr-dashboard/src/protocol/: data.tsx  location-map.tsx  recieved-messages.tsx  sent-messages.tsx
netvr-dashboard/src/thesis/: base.tsx  bibliography-schema.json  design.tsx  document.tsx  font.tsx  ligatures.tsx  literature.tsx  react-markdown.tsx  references.tsx  remark-plugins.tsx  thesis.tsx  title-page.tsx
netvr-dashboard/src/thesis-text/: 1-introduction.md  2-analysis.md  3-architecture.md  3-design.md  4-accuracy.md  4-demo.md  5-accuracy.md  5-demo.md  6-conclusion.md  bibliography.json  calibration-sequence-diagram.excalidraw  chapters.tsx  full-text.md  overview.excalidraw  technical-design.md  test.md
netvr-dashboard/src/wasm/: .gitignore  cpp_netvr.js  cpp_netvr.ts  cpp_netvr.wasm  isbl_netvr.ts  wasm-wrapper.ts
netvr-dashboard/src/wasm2/: README.md  netvr_calibrate.d.ts  netvr_calibrate.js  netvr_calibrate_bg.js  netvr_calibrate_bg.wasm  netvr_calibrate_bg.wasm.d.ts
netvr-deno/: index.d.ts  package.json  peer.ts  room.ts  server.ts  test.js  tsconfig.json  utils.ts  worker.ts
netvr-rust/: .gitignore  README.md  cargo.toml  jaeger.sh  rust-toolchain.toml  rustfmt.toml
netvr-rust/.cargo/: config-example.toml
netvr-rust/analyse/: Cargo.toml
netvr-rust/analyse/src/: main.rs  parse.rs  plot.rs  plot_positions.rs
netvr-rust/codegen/: build.rs  cargo.toml
netvr-rust/codegen/src/: main.rs
netvr-rust/isbl_netvr_rust/: build.rs  cargo.toml  post_build.rs
netvr-rust/isbl_netvr_rust/src/: implementation.rs  instance.rs  lib.rs  overrides.rs  xr_wrap.rs
netvr-rust/netvr_calibrate/: Cargo.toml
netvr-rust/netvr_calibrate/examples/: calibrate.rs
netvr-rust/netvr_calibrate/src/: calibrate.rs  input.rs  lib.rs
netvr-rust/netvr_client/: Cargo.toml
netvr-rust/netvr_client/src/: error.rs  lib.rs  main.rs  quinn_connect.rs
netvr-rust/netvr_data/: cargo.toml
netvr-rust/netvr_data/src/: app.rs  framing.rs  handle_serializer.rs  lib.rs  net.rs
netvr-rust/netvr_discover/: Cargo.toml
netvr-rust/netvr_discover/src/: main.rs
netvr-rust/netvr_plugin/: build.rs  cargo.toml  post_build.rs
netvr-rust/netvr_plugin/src/: bincode_abi.rs  config.rs  data.rs  implementation.rs  instance.rs  lib.rs  local_configuration.rs  net_client.rs  overrides.rs  xr_wrap.rs
netvr-rust/netvr_server/: Cargo.toml
netvr-rust/netvr_server/src/: accept_connection.rs  app.rs  calibration_protocol.rs  client.rs  context.rs  dashboard.rs  discovery_server.rs  main.rs  my_socket.rs  quinn_server.rs  server.rs
netvr-rust/src/: implementation.rs  lib.rs  loader.rs  log.rs  utils.rs  xr_functions.rs  xr_structures.rs
netvr-rust/xr_layer/: build.rs  cargo.toml
netvr-rust/xr_layer/src/: debuggable.rs  lib.rs  loader.rs  loader_globals.rs  log.rs  sized_value_iterator.rs  utils.rs  xr_debug.rs  xr_functions.rs  xr_iterator.rs  xr_listings.rs  xr_struct.rs  xr_struct_chain.rs  xr_structures.rs
netvr-server/: README.md  compile.ts  deno.jsonc  import_map.json  index.d.ts  package.json  paths.ts  peer.ts  room.ts  server.ts  tsconfig.json  utils.ts  worker.ts  wrangler.toml
netvr-server/public/: index.html  utils.js
netvr-server/scripts/: compile.ts  update-invocations.ts  vendor.ts
netvr-server/src/: batch-messages.ts  client-definition.ts  immer-store.ts  index.d.ts  message-utils.ts  netvr-handler.ts  netvr-id-handler-layer.ts  netvr-key-value-store.ts  netvr-room.ts  utils.ts  websocketstream.ts
netvr-server/src/features/: calibration-feature.ts  create-feature.ts
netvr-server/vendor-patched/: leaf.ts
netvr-unity/: README.md
netvr-unity/Assets/: AxisSynchronizer.cs  Blue.mat  Green.mat  IsblDeviceModel.cs  IsblNet.cs  IsblNetComponent.cs  IsblNetData.cs  IsblNetRemoteDevice.cs  IsblNetRemoteDeviceManager.cs  IsblNetUploadTransform.cs  IsblPersistentData.cs  IsblStaticXRDevice.cs  IsblTrackedPoseDriver.cs  IsblXRDevice.cs  IsblXRDeviceComponent.cs  New Material.mat  Purple.mat  ReconnectingClientWebSocket.cs  Red.mat  ShaderVariants.shadervariants  TrackedObjectModel.cs  XRTrackedController.cs  device.prefab  headset.glb  pass.prefab  training.prefab
netvr-unity/ProjectSettings/: EditorBuildSettings.asset  GraphicsSettings.asset  PackageManagerSettings.asset  ProjectSettings.asset  QualitySettings.asset
schemas/: calibration-example.json  calibration-schema.json
(+94 files in other folders)
