[package]
name = "analyse"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
nalgebra = { version = "0.32.2", features = ["serde"] }
serde = "1.0.159"
serde_json = "1.0.96"
nom = "7.1.3"
