[package]
name = "netvr_calibrate"
version = "0.1.0"
edition = "2021"

[dependencies]
nalgebra = { version = "0.32.2", features = ["serde"] }
num = { version = "0.4.0", features = ["serde"] }
serde = "1.0.159"
netvr_data = { path = "../netvr_data" }
anyhow = "1.0.70"

[dev-dependencies]
anyhow = "1.0.70"
serde_json = "1.0.96"
chrono = {version = "0.4.24", default-features = false, features = ["clock"]}

[lib]
crate-type = ["cdylib", "lib"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.85"
serde_json = "1.0.96"
