[package]
name = "netvr_discover"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.12.0"
futures-util = "0.3.28"
mdns = { git = "https://github.com/dljsjr/mdns.git", branch = "master" }
simple-mdns = { version = "0.4.0", features = ["async-tokio"] }
tokio = { version = "1.27.0", features = ["full"] }
