[package]
name = "netvr_discover"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-util = "0.3.28"
mdns = "3.0.0"
tokio = { version = "1.27.0", features = ["full"] }
trust-dns-resolver = { git = "https://github.com/bluejekyll/trust-dns.git", rev = "0c07d00635c515c8ee82a065fbd0617d5d608d06", features = ["mdns"] }
