[package]
name = "netvr_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.27.0", features = ["full"] }
socket2 = { version = "0.3.4", features = ["reuseport"] }
netvr_data = { path = "../netvr_data" }
