[package]
name = "netvr_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.27.0", features = ["full"] }
netvr_data = { path = "../netvr_data" }
rcgen = "0.10.0"
quinn = { version = "0.9.3" }
# must be the same versions as used by quinn
quinn-udp = { version = "0.3.2" }
quinn-proto = { version = "0.9.3" }
rustls = { version = "0.20.8", features = ["quic"] }
anyhow = "1.0.70"
